--- a/config
+++ b/config
@@ -1,3 +1,14 @@
+#Grafana Configs
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=changeme
 GF_USERS_ALLOW_SIGN_UP=false
+GRAFANAURL=grafana.localdomain
+
+
+#Prometheus Configs
+
+PROMURL=prom.localdomain
+
+
+#CAdvisor Configs
+CADVISORURL=cadvisor.localdomain
