--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     networks:
       - monitor-net
     labels:
-      - "org.label-schema.group": "monitoring"
+      - "org.label-schema.group: monitoring"
       - "traefik.enable=true"
       - "traefik.http.routers.prometheus.entrypoints=web"
       - "traefik.http.routers.prometheus.rule=Host(`${PROMURL}`)"
@@ -80,7 +80,7 @@ services:
     networks:
       - homeinfra_default
     labels:
-      - "org.label-schema.group": "monitoring"
+      - "org.label-schema.group: monitoring"
 
       - "traefik.enable=true"
       - "traefik.tcp.routers.nodeexporter.entrypoints=nodeexporter"
@@ -104,7 +104,7 @@ services:
     networks:
       - homeinfra_default
     labels:
-      - "org.label-schema.group": "monitoring"
+      - "org.label-schema.group: monitoring"
       - "traefik.enable=true"
       - "traefik.http.routers.cadvisor.entrypoints=web"
       - "traefik.http.routers.cadvisor.rule=Host(`${CADVISORURL}`)"
@@ -135,7 +135,7 @@ services:
     networks:
       - homeinfra_default
     labels:
-      - "org.label-schema.group": "monitoring"
+      - "org.label-schema.group: monitoring"
       - "traefik.enable=true"
       - "traefik.http.routers.grafana.entrypoints=web"
       - "traefik.http.routers.grafana.rule=Host(`${GRAFANAURL}`)"
