--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.7'
 
-# networks:
-#   monitor-net:
-#     driver: bridge
+networks:
+  homeinfra_default:
+    external: true
 
 volumes:
     prometheus_data:
