--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   prometheus:
     image: prom/prometheus:v2.18.1
+    user: "1002:994"
     container_name: prometheus
     volumes:
       - ./prometheus:/etc/prometheus
@@ -121,6 +122,7 @@ services:
 
   grafana:
     image: grafana/grafana:6.7.3
+    user: "1002:994"
     container_name: grafana
     volumes:
       - grafana_data:/var/lib/grafana
