--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -13,10 +13,15 @@ rule_files:
 
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
-  - job_name: 'nodeexporter'
+#  - job_name: 'nodeexporter'
+#    scrape_interval: 1m
+#    static_configs:
+#      - targets: ['nodeexporter:9100']
+
+  - job_name: 'nodeexporter_host'
     scrape_interval: 1m
     static_configs:
-      - targets: ['nodeexporter:9100']
+      - targets: ['192.168.0.10:9100']
 
   - job_name: 'cadvisor'
     scrape_interval: 1m
